# k8s-jobs

./: .flake8  .gitignore  .travis.yml  README.rst  mypy.ini  pyproject.toml  pytest.ini
examples/: Dockerfile  create.py  crud.py
examples/flask/: app.py
examples/k8s/: configmap-helloworld.yaml  configmap-job-definitions.yaml  configmap-pi.yaml  deployment.yaml  job-fail.yaml  job-helloworld.yaml  job-template.yaml  job-timeout.yaml  job.yaml  role.yaml  service-account.yaml
k8s_async/app/: k8s_async.py
k8s_async/k8s/: job.py
k8s_jobs/: config.py  exceptions.py  file_reloader.py  manager.py  spec.py
k8s_jobs/flask/: app.py  jobs.py  ops.py
k8s_jobs/k8s/: config.py  job.py
test/: conftest.py
test/fixtures/: examples.py  k8s.py
test/integration/: test_manager.py  test_spec.py
test/unit/: test_config.py  test_file_reloader.py  test_job.py  test_job_manager.py  test_job_spec.py  test_manager.py  test_spec.py
test/unit/k8s/: test_job.py
